# cpp17

./: README.md
Engine/: CMakeLists.txt  engine.cpp  engine.h
Game/: CMakeLists.txt  main.cpp
cpp17/: CMakeLists.txt  Log.cpp  Log.h  Log2.h  TypePunning.cpp  array.cpp  benchmarking.cpp  cachelocality.cpp  const.cpp  constInClass.cpp  cpp17.cpp  dynamicarray.cpp  lib_dynamiclinking.cpp  lib_staticlinking.cpp  lvalue_rvalue.cpp  move.cpp  new.cpp  noobyhabits.cpp  pch.h  precompiledheaders.cpp  smartpointers.cpp  static.cpp  string.cpp  templates.cpp  this.cpp  typealias.cpp  typeconversions.cpp  virtualDestructor.cpp
cpp1720/: CMakeLists.txt  Log.cpp  Log.h  Log2.cpp  TypePunning.cpp  array.cpp  copy.cpp  globallocalallocation.cpp  instantiate.cpp  lib_dynamiclinking.cpp  localstatic.cpp  lvalue_rvalue.cpp  macro.cpp  main_linker.cpp  main_static.cpp  malloc_new.cpp  move2.cpp  mutable.cpp  optional.cpp  smallstringoptimization.cpp  span.cpp  stack_heap.cpp  static.cpp  staticarray.cpp  stringview.cpp  variant_unions.cpp
